# portagecfg

./: .gitignore  CMakeLists.txt  README.md  main.cpp  portagecfg.cpp  portagecfg.hpp  resources.qrc  run_command.cpp  run_command.hpp  version.hpp
i18n/: portagecfg_es_US.qm  portagecfg_es_US.ts
src/: logger.cpp  logger.hpp  main.cpp  writer.cpp  writer.hpp
